--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,22 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.ChatMe.AppBarOverlay">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:minHeight="?actionBarSize"
-        android:padding="@dimen/appbar_padding"
-        android:text="@string/app_name"
-        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
-        android:layout_weight="1"/>
+        android:theme="@style/Theme.ChatMe.AppBarOverlay"
+
+        >
+
     <androidx.appcompat.widget.Toolbar
-        android:layout_width="wrap_content"
+        android:id="@+id/toolbar"
+        app:title="Chat Me"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:menu="@menu/main_page_menus"
         android:layout_weight="2.5"
+       android:paddingLeft="5dp"
+
         />
-</LinearLayout>
 
 
         <com.google.android.material.tabs.TabLayout
