--- a/app/src/main/res/menu/main_page_menus.xml
+++ b/app/src/main/res/menu/main_page_menus.xml
@@ -12,4 +12,8 @@
         android:title="Settings"
 
         />
+    <item
+        android:id="@+id/logout"
+        app:showAsAction="never"
+        android:title="Logout"/>
 </menu>
