--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -1,9 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatRoom.ChatRoomActivity">
+    tools:context=".activities.ChatRoomActivity"
+    android:orientation="vertical"
+    android:background="@color/Jade"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_weight="2"
+        android:id="@+id/chat_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:reverseLayout="true"
+        app:stackFromEnd="true"
+        />
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="3dp"
+        android:orientation="horizontal">
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="45dp"
+            android:background="@drawable/chat_toolbar_background"
+            android:padding="3dp"
+            android:layout_weight="2">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/chat_bar_smiley"
+                android:foreground="@drawable/ic_baseline_tag_faces_24"
+                android:background="@drawable/chat_toolbar_background"
+                android:minWidth="35dp"
+                android:minHeight="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:foregroundTint="@color/black"
+                />
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/chat_bar_message"
+                android:padding="5dp"
+                android:layout_weight="2"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/chat_bar_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="35dp"
+                android:minWidth="35dp"
+                android:foreground="@drawable/ic_baseline_camera_alt_24"
+                android:background="@drawable/chat_toolbar_background"
+                android:foregroundTint="@color/black"
+                android:layout_marginLeft="5dp"
+                />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/chat_bar_file"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="35dp"
+                android:minHeight="35dp"
+                android:background="@drawable/chat_toolbar_background"
+                android:foreground="@drawable/ic_baseline_attach_file_24"
+                android:foregroundTint="@color/black"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="5dp"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/chat_bar_mic"
+            android:foreground="@drawable/ic_baseline_mic_none_24"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/button_background"
+            android:foregroundGravity="center"
+            android:padding="5dp"
+           android:layout_gravity="center_vertical"
+
+
+            />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+</LinearLayout>
