--- a/app/src/main/res/layout/rv_chat_items.xml
+++ b/app/src/main/res/layout/rv_chat_items.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    >
-
+    android:padding="10dp"
+    android:layout_margin="5dp">
+<androidx.cardview.widget.CardView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="55dp">
     <ImageView
         android:id="@+id/rv_chat_profile_photo"
         android:src="@mipmap/ic_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentLeft="true"
         android:padding="3dp"
         android:layout_weight="1"
+        android:scaleType="centerCrop"
+
 
         />
+</androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -26,7 +35,7 @@
         <TextView
             android:id="@+id/rv_chat_friend_names"
             android:text="hello Sharma"
-            android:textSize="29dp"
+            android:textSize="24sp"
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,8 +47,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="hello"
-            android:textSize="20dp"
+            android:textSize="18sp"
             android:layout_margin="5dp"
+            android:maxWidth="250dp"
 
 
             />
@@ -56,7 +66,7 @@
             android:text="7:00"
 
             android:layout_margin="2dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"/>
@@ -64,7 +74,7 @@
             android:id="@+id/rv_chat_date"
             android:text="7:00"
             android:layout_margin="2dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"/>
