--- a/app/src/main/res/layout/status_fragment.xml
+++ b/app/src/main/res/layout/status_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.statusFragment"
+    tools:context=".ui.main.fragments.statusFragment"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
